--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   },
   "devDependencies": {
     "broccoli-asset-rev": "^2.4.5",
+    "calculate-cache-key-for-tree": "^2.0.0",
     "ember-cli": "~2.15.0",
     "ember-cli-dependency-checker": "^2.0.0",
     "ember-cli-eslint": "^4.0.0",
